--- a/action.yml
+++ b/action.yml
@@ -5,9 +5,17 @@ inputs:
     description: 'Who to greet'
     required: true
     default: 'World'
+
+  veracode:  # id of input
+    description: 'Who to greet'
+     required: true
+    
 outputs:
   time: # id of output
     description: 'The time we greeted you'
+  veracode:
+    description: 'The time we greeted you'
+    
 runs:
   using: 'node20'
   main: 'index.js'
