--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,23 +13,19 @@ jobs:
         uses: actions/github-script@v7
         id: my-script
         with:
-          result-encoding: string
-          retries: 3
-          retry-exempt-status-codes: 400,401
+          who-to-greet: "test"
+          veracode-data: "sample"
           script: |
-            github.rest.issues.get({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-            })
-      - name: Hello world action step
-        uses: ./ # Uses an action in the root directory
-        id: hello
-        with:
-          who-to-greet: 'Mona the Octocat'
-          veracode-data: 'sample-app'
+            const script = require('./dist/index')
+            await script({github, context, core})
+      # - name: Hello world action step
+      #   uses: ./ # Uses an action in the root directory
+      #   id: hello
+      #   with:
+      #     who-to-greet: 'Mona the Octocat'
+      #     veracode-data: 'sample-app'
       # Use the output from the `hello` step
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
-      - name: Get the output time
-        run: echo "The veracode data ${{ steps.hello.outputs.veracode }}"
+      # - name: Get the output time
+      #   run: echo "The time was ${{ steps.hello.outputs.time }}"
+      - name: Get veracode data
+        run: echo "The veracode data ${{ steps.my-script.outputs.veracode }}"
