--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
